# Inverse-Agent

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  commit-review-benchmark.md  milestone-v0.2.md  review-log.md  roadmap.md  safety.md  security.md
scripts/: start-local-model.ps1  start-workbench.ps1  verify-package-assets.py
src/inverse_agent/: __init__.py  approvals.py  attestations.py  cli.py  commit_review.py  control_plane.py  dogfood.py  environments.py  eval.py  fs_tools.py  investigation.py  investigation_benchmark.py  investigation_model.py  mcp_contract.py  mcp_server.py  migrations.py  model_config.py  models.py  planner.py  policies.py  redaction.py  review_benchmark.py  run_state.py  runner.py  secure_fs.py  service.py  workflow.py
src/inverse_agent/adapters/: __init__.py  android.py  base.py  django.py  generic.py  ios.py  pytorch.py  registry.py
src/inverse_agent/benchmark_assets/: __init__.py
src/inverse_agent/ui/: __init__.py  app.css  app.js  index.html
tests/: conftest.py  test_adapters.py  test_attestations.py  test_cli_investigation.py  test_commit_review.py  test_control_plane.py  test_dogfood.py  test_environments.py  test_fs_tools.py  test_fs_tools_recursive.py  test_investigation.py  test_investigation_benchmark.py  test_investigation_model.py  test_migrations.py  test_model_config.py  test_models.py  test_planner_mcp.py  test_redaction.py  test_review_benchmark.py  test_runner.py  test_service_investigation.py  test_workflow_cli.py
(+22 files in other folders)
