[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inverse-agent"
version = "0.1.0"
description = "OSS-composed agentic workbench for developer and research workflows"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Inverse.AI" }]
dependencies = [
  "fastapi>=0.115,<1",
  "langgraph>=0.2,<2",
  "mcp>=1.27,<2",
  "pydantic>=2,<3",
  "rich>=13,<15",
  "typer>=0.12,<1",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "ruff>=0.8,<1",
]

[project.scripts]
inverse-agent = "inverse_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

